2011-06-28 Riccardo Mottola <rm@gnu.org>

	* Document.m
	Fixed crash with no image.

2011-06-10 Riccardo Mottola <rm@gnu.org>

	* BTree.m
	Fixed init methods.

2011-06-08 Riccardo Mottola <rm@gnu.org>

	* Document.m:
	Fix init methods to be less fragile